--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MidNight - Home</title>
-
+<meta property="og:description" content="Site Officiel de MidNight" />
+<meta property="og:image" content="MidNightimg.png" />
   <!-- 
     - favicon
   -->
