--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <!-- 
     - preload image
   -->
+<iframe src="https://discord.com/widget?id=1007623548711485541&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
 </head>
 
